test/core/errors/array_types_error/zs/implicit_array_with_length_error.zs
package implicit_array_with_length_error;

struct ImplicitArrayWithLengthError
{
    uint16          arraySize;
    implicit int32  array[arraySize];   // implicit arrays cannot have length
};
